--- a/plugin/components/indexPlugList/indexPlugList.wxss
+++ b/plugin/components/indexPlugList/indexPlugList.wxss
@@ -2,6 +2,9 @@
 page{
     background: #F6F6F6;
 }
+view{
+    box-sizing: border-box;
+}
 .line-gray{
     width: 100%;
     height: 28rpx;
@@ -32,13 +35,12 @@ page{
     box-sizing: border-box;
     padding-left: 40rpx;
     overflow: hidden;
+    font-weight: bold;
 }
 .product-description{
     width: 100%;
     box-sizing: border-box;
     padding: 24rpx 0 24rpx 40rpx;
-    border-top:1px solid #EFEFEF;
-
 }
 .image-description{
     width: 100%;
@@ -72,6 +74,7 @@ page{
     font-size: 32rpx;
     width: 80%;
     overflow: hidden;
+    font-weight: bold;
 }
 .image-small-title{
     padding: 0 0 24rpx 40rpx;
