--- a/plugin/components/productDetailedPlug/productDetailed.wxss
+++ b/plugin/components/productDetailedPlug/productDetailed.wxss
@@ -50,7 +50,6 @@ page{
 .content-imgPicture{
   width: 100%;
   height: 362rpx;
-  border: 1rpx solid red;
   margin-top: 24rpx;
   margin-bottom: 23rpx;
 }
@@ -59,6 +58,7 @@ page{
   font-Family: "PingFangSC-Regular";
 	font-Size: 32rpx;
 	color: #aaaaaa;
+  padding-bottom: 26rpx;
 }
 /*地老天荒售后电话  */
 .dlth{
@@ -67,6 +67,7 @@ page{
   color: #ccc;
   font-size: 30rpx;
   padding: 10rpx 0 20rpx 0;
+  margin-top: 88rpx;
 }
 .dlth_logo{
   width: 400rpx;
