2018/07/05 10:59 按照开发标准更新

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,1 +1,1 @@
-<indexPlugList imageUrl="{{imgUrl}}" bind:clickDetail="jumpDetail"/>
+<indexPlugList list="{{list}}" typeList = "{{typeList}}" listTitle="{{listTitle}}" imageIsShow="{{true}}" host="{{host}}" bind:clickDetail="jumpDetail"/>
