--- a/plugin/components/plugin_style/list_plugin/v1/list_plugin_index/list_plugin_index.wxss
+++ b/plugin/components/plugin_style/list_plugin/v1/list_plugin_index/list_plugin_index.wxss
@@ -1,7 +1,15 @@
-/* plugin/components/indexPlugList/indexPlugList.wxss */
+/**
+ *  版权声明 :  地老天荒科技有限公司
+ *  文件名称 :  list_plugin_index.wxss
+ *  创 建 者 :  Cheng Tao
+ *  创建日期 :  2018/06/22 20:38
+ *  文件描述 :  列表组件首页js文件
+ *  历史记录 :  -----------------------
+ */
 page{
     background: #F6F6F6;
 }
+/*将标准盒模型改为怪异盒模型  */
 view{
     box-sizing: border-box;
 }
@@ -10,6 +18,7 @@ view{
     height: 28rpx;
     background: #F6F6F6;
 }
+/*图片显示外套  */
 .image-show-wrap{
     width: 100%;
     position: relative;
@@ -25,6 +34,7 @@ view{
     left: 640rpx;
     top: -24rpx;
 }
+/*列表外套  */
 .list-content-wrap{
     font-size: 32rpx;
 }
@@ -42,12 +52,14 @@ view{
     box-sizing: border-box;
     padding: 24rpx 0 24rpx 40rpx;
 }
+/*长篇文字部分  */
 .image-description{
     width: 100%;
     box-sizing: border-box;
     padding: 24rpx 40rpx;
     color:#aaaaaa;
 }
+/*编辑和删除样式外套  */
 .operation-wrap{
     width: 100%;
     padding-left: 515rpx;
@@ -55,7 +67,7 @@ view{
     display: flex;
     height: 40rpx;
 }
-
+/*编辑和删除图片样式  */
 .edit-image{
     width: 35rpx;
     height: 35rpx;
@@ -64,6 +76,7 @@ view{
     width: 30rpx;
     height: 30rpx;
 }
+/*图片隐藏后的样式  */
 .imageHide-wrap{
     width: 100%;
     background: #ffffff;
@@ -81,6 +94,7 @@ view{
     font-size: 24rpx;
 
 }
+/* 添加按钮部分 */
 .fill{
     width: 100%;
     height: 100rpx;
@@ -94,4 +108,16 @@ view{
     position: fixed;
     left: 0;
     bottom: 0;
+}
+/*地老天荒售后电话  */
+.dlth{
+  width: 100%;
+  text-align: center;
+  color: #ccc;
+  font-size: 30rpx;
+  padding: 10rpx 0 20rpx 0;
+}
+.dlth_logo{
+  width: 400rpx;
+  margin-bottom: 10rpx;
 }
