--- a/plugin/components/plugin_module/admin_plugin/v1/admin_plugin.wxss
+++ b/plugin/components/plugin_module/admin_plugin/v1/admin_plugin.wxss
@@ -7,7 +7,7 @@
  *  历史记录 :  -----------------------
  */
  page{
-     background: #263d49;
+     background: #262c49;
      color: #a8abb6;
  }
  .header{
