2018/07/07 21:18 更新页面中的组件命名

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,1 +1,1 @@
-<indexPlugList list="{{list}}" typeList = "{{typeList}}" listTitle="{{listTitle}}" imageIsShow="{{true}}" host="{{host}}" bind:clickDetail="jumpDetail"/>
+<list_plugin_one_index list="{{list}}" typeList = "{{typeList}}" listTitle="{{listTitle}}" imageIsShow="{{true}}" host="{{host}}" bind:clickDetail="jumpDetail"/>
