--- a/plugin/components/plugin_module/apply_plugin/v1/apply_plugin.wxml
+++ b/plugin/components/plugin_module/apply_plugin/v1/apply_plugin.wxml
@@ -1,4 +1,5 @@
-<!-- 版权声明 :  地老天荒科技有限公司
+<!-- 
+     版权声明 :  地老天荒科技有限公司
      文件名称 :  admin_plugin.wxml
      创 建 者 :  Cheng Tao
      创建日期 :  2018/07/05 15:58
