--- a/miniprogram/pages/productDetailed/index.wxml
+++ b/miniprogram/pages/productDetailed/index.wxml
@@ -1,1 +1,1 @@
-<productDetailed imageUrl="{{imgUrl}}" logoImageUrl="{{logoImgUrl}}"/>
+<list_plugin_one_detail imageUrl="{{imgUrl}}" logoImageUrl="{{logoImgUrl}}"/>
